# jedi-vision-nano-code

./: .gitignore  .gitmodules  LICENSE  README.md  get_weights.sh  main.py  pyproject.toml  start_container.sh
examples/: README.md  run_segformer.py  run_vosk.py  run_yolo.py
src/c_utils/: c_utils.c  c_utils.h  object.h  parse_bytes.h
src/jv/: README.md  driver.py
src/jv/audio/: README.md  __init__.py  buffer.py
src/jv/audio/example/: Makefile  example_client.py  example_server.c
src/jv/camera/: README.md  __init__.py  buffer.py
src/jv/driver/: driver.py
src/jv/pb/: README.md  objectrep.c  objectrep.h  objectrep_pb2.py
src/jv/representation/: __init__.py  abstract.py  data.py  environment.py  object.py  yolo_utils.py
src/jv/representations/: __init__.py  abstract.py  ade_id.py  ade_palette.py  ade_utils.py  data.py  environment.py  exceptions.py
src/jv/scene/video_depth_anything_code/: video_depth.py  video_depth_stream.py
src/jv/serial/: __init__.py  example.py  serial.py  tmp.py
src/jv/utils/: __init__.py  utils.py
src/protobuf/: generate.sh  objectrep.proto
tests/: run_segformer_binary-object-mask.py  run_yolo_binary-object-mask.py  run_yolo_detection.py  test_serial.py
tests/audio_buffer/: README.md  run_audio_buffer.py
tests/audio_buffer/protobuf/: Makefile  server.c
tests/audio_buffer/struct/: Makefile  server.c
tests/audio_buffer_protobuf/: Makefile  server.c
tests/object_buffer/: README.md  run_audio_buffer.py
tests/object_buffer/protobuf/: Makefile
tests/object_buffer/struct/: Makefile  server.c
