[project]
name = "jv"
version = "0.1.0"
description = ""
authors = [
    {name = "Colin Pannikkat",email = "pannikkc@oregonstate.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <=3.14"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "sounddevice (>=0.5.3,<0.6.0)",
    "ultralytics (>=8.3.227,<9.0.0)",
    "pyzmq (>=27.1.0,<28.0.0)",
    "protobuf (>=6.33.1,<7.0.0)",
    "pbtools (>=0.47.0,<0.48.0)",
    "lap (>=0.5.12,<0.6.0)",
    "imageio (>=2.37.2,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--ignore=tests/object_buffer/protobuf/pbtools",
]
